<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/show_log"
        android:title="@string/btn_show_log"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/show_settings"
        android:title="@string/btn_settings"
        app:showAsAction="never"/>
</menu>