<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/title_settings_category_interface">
        <ListPreference
            android:defaultValue="en"
            android:entries="@array/lang_titles"
            android:entryValues="@array/lang_values"
            android:key="Feelings.Guide.Selected.Language"
            android:negativeButtonText="@null"
            android:title="@string/title_settings_language"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_settings_category_log">
        <ListPreference
            android:defaultValue="d MMM yyyy"
            android:entries="@array/date_formats"
            android:entryValues="@array/date_formats"
            android:key="Feelings.Guide.Date.Format"
            android:negativeButtonText="@null"
            android:title="@string/title_settings_date_format"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="HH:mm"
            android:entries="@array/time_formats"
            android:entryValues="@array/time_formats"
            android:key="Feelings.Guide.Time.Format"
            android:negativeButtonText="@null"
            android:title="@string/title_settings_time_format"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_settings_category_builtin_questions">
        <Preference
            android:key="Feelings.Guide.Restore.Built.In.Questions"
            android:title="@string/title_settings_restore_built_in_questions" />
    </PreferenceCategory>
</PreferenceScreen>